--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="ian at github : ">
+    <meta name="description" content="Ian at GitHub : Serendipity Styx Edition">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>ian at github</title>
+    <title>Ian at GitHub</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ophian">View on GitHub</a>
 
-          <h1 id="project_title">ian at github</h1>
+          <h1 id="project_title">Ian at GitHub</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
@@ -27,10 +27,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-my-github-pages" class="anchor" href="#welcome-to-my-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my GitHub Pages.</h3>
+        <h3><a id="welcome-to-my-github-pages" class="anchor" href="#welcome-to-my-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home of Serendipity Styx Edition.</h3>
 
-<p>Init hello</p>
+        <p>Init hello</p>
       </section>
     </div>
 
@@ -41,7 +40,6 @@
       </footer>
     </div>
 
-    
 
   </body>
 </html>
