--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="index,follow">
+    <link rel="canonical" href="https://ophian.github.io/">
     <meta name="description" content="Ian at GitHub : Serendipity Styx Edition">
-
+    <meta name="keywords" content="blog, blog-engine, weblog, Serendipity, Serendipity Styx, Styx Edition, Styx, php, mysql, mysqli, sqlite, postgresql, smarty">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Ian at GitHub</title>
@@ -27,9 +30,40 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3><a id="welcome-to-my-github-pages" class="anchor" href="#welcome-to-my-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home of Serendipity Styx Edition.</h3>
+        <h1><a id="welcome-to-my-github-pages" class="anchor" href="#welcome-to-my-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Home of the Serendipity Styx Edition.</h1>
 
-        <p>Init hello</p>
+        <p><a href="https://github.com/ophian/styx">Styx</a> is what Serendipity should be!</p>
+
+        <h3><a id="user-content-serendipity-styx--a-reliable-secure--extensible-php-blog" class="anchor" href="#serendipity---a-reliable-secure--extensible-php-blog" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a> Serendipity Styx - A reliable, secure &amp; extensible PHP blog engine</h3>
+
+        <p><a href="https://s9y.org">Serendipity</a> is a PHP-powered weblog engine which gives the user an easy way to maintain a blog. While the default package is designed for the casual blogger, Serendipity offers an expandable framework with the power for professional applications.</p>
+        <h3><a id="user-content-why-styx" class="anchor" href="#why-styx" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a> Why Styx?</h3>
+        <p>Its project name originally originates from <em>"River Styx"</em> in the Greek classical mythology.<br>
+        If this is too dark for you, you may read this as <strong>S</strong>erendipi<strong>ty</strong> Ne<strong>x</strong>t. :) or just <strong>Sty x</strong>.</p>
+        <p><em>Serendipity 2.1-Alpha ++</em> more and more became a broken playground, simplifying things without need and commits without knowledge and appreciation about its deepest nuances. Which I regret deeply.</p>
+        <p><strong>Styx</strong> is what <strong>Serendipity</strong> should be!</p>
+        <p>Over many many years I very actively helped to develop Serendipity, in special the 1.7, 2.0 and 2.1 Series, the plugins section, and daily guided community requests in the forum. Realising some day that my expertise and insight wasn't seen that helpful any more, I decided to go.</p>
+
+        <h3><a id="user-content-the-serendipity-styx-edition" class="anchor" href="#the-serendipity-styx-edition" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a> The Serendipity Styx Edition</h3>
+
+        <p>It was built in my origin intent primarily for myself to keep track on my vision of what Serendipity used to be, wide and open, and with multi levels of extended properties. I wanted it - to <strong>not</strong> cut off this extendibility without real need. Styx is a contributed document of my deep affinity with Serendipity.</p>
+        <p>As long as I find the time and the commitment to make this even better, Styx will develop and will include all good parts of the origin Serendipity development. You may replace your origin Serendipity installation without any fear with this extended Edition and you will find everything work as intendet. Go and read the <strong>Styx</strong> <a href="https://github.com/ophian/styx/wiki">Wiki</a> to see how this can be easily done without too much effort. Even more you may want to read the <a href="https://github.com/ophian/styx/commits/master">commit history</a> and/or the <strong>Styx</strong> <a href="https://github.com/ophian/styx/blob/master/docs/NEWS">ChangeLog</a>.</p>
+        <p>Since <strong>plugins</strong> are an essential part of Serendipity, this repository holds a strongly maintained additional_plugins repository. The Styx Spartacus plugin is able to work with it - Serendipity is not.</p>
+        <p>The origin Serendipity help documentation is found on the Serendipity website at s9y.org, and you are requested to read all about it there, as long as it suites Styx too in the main parts. Some important changes between the two editions will have to be added to the Styx Wiki or this page sooner or later, I assume.</p>
+
+        <h3><a id="user-content-styx-releases" class="anchor" href="#the-serendipity-styx-edition" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a> Styx releases:</h3>
+
+        <p>You can find current <strong>Styx</strong> <a href="https://github.com/ophian/styx/releases">releases here</a>.<br>
+        Development versions are (currently) found in the master branch.</p>
+        <ul>
+            <li><strong>January 2017, 26th</strong> - <a href="https://github.com/ophian/styx/releases/tag/2.1.0">Styx 2.1.0</a> was released. A very intense cared release shot and more of a 2.2 version, which will follow soon, to demonstrate what Styx is in real life.</li>
+            <li><em>Oh, so hot.. :D Upcoming Styx 2.2 Edition is not far away...</em></li>
+        </ul>
+
+        <h3><a id="user-content-help-requests" class="anchor" href="#the-serendipity-styx-edition" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a> Help requests:</h3>
+
+        <p>Please use the GitHub Styx <a href="https://github.com/ophian/styx/issues">issue</a> tasks, if you have questions or found a bug. Thanks.</p>
+        <p>Enjoy! Regards Ian,</p>
       </section>
     </div>
 
