--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index,follow">
@@ -22,7 +22,7 @@
           <a id="forkme_banner" href="https://github.com/ophian">View on GitHub</a>
 
           <h1 id="project_title">Ian at GitHub</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline">Serendipity Styx Edition</h2>
 
         </header>
     </div>
@@ -56,8 +56,8 @@
         <p>You can find current <strong>Styx</strong> <a href="https://github.com/ophian/styx/releases">releases here</a>.<br>
         Development versions are (currently) found in the master branch.</p>
         <ul>
-            <li><strong>January 2017, 26th</strong> - <a href="https://github.com/ophian/styx/releases/tag/2.1.0">Styx 2.1.0</a> was released. A very intense cared release shot and more of a 2.2 version, which will follow soon, to demonstrate what Styx is in real life.</li>
             <li><em>Oh, so hot.. :D Upcoming Styx 2.2 Edition is not far away...</em></li>
+            <li><strong>January 2017, 26th</strong> - <a href="https://github.com/ophian/styx/releases/tag/2.1.0">Styx 2.1.0</a> was released. A very intense cared release shot and more of a 2.2 version, which will follow soon, to demonstrate what Styx is in real life.</li>
         </ul>
 
         <h3><a id="user-content-help-requests" class="anchor" href="#the-serendipity-styx-edition" aria-hidden="true"><svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a> Help requests:</h3>
