Announce Styx-2.2.0 release

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="blog, blog-engine, weblog, Serendipity, Serendipity Styx, Styx Edition, Styx, php, mysql, mysqli, sqlite, postgresql, smarty">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Ian at GitHub</title>
+    <title>Ian at GitHub : Serendipity Styx Edition</title>
   </head>
 
   <body>
@@ -56,7 +56,8 @@
         <p>You can find current <strong>Styx</strong> <a href="https://github.com/ophian/styx/releases">releases here</a>.<br>
         Development versions are (currently) found in the master branch.</p>
         <ul>
-            <li><em>Oh, so hot.. :D Upcoming Styx 2.2 Edition is not far away...</em></li>
+            <li><em style="color:#BBB">Ermgh.. Whistles.. :D Upcoming Styx 2.4 Edition is not so very far away...</em></li>
+            <li><strong>June 2017, 24th</strong> - <a href="https://github.com/ophian/styx/releases/tag/2.2.0">Styx 2.2.0</a> was released. Setting this LIVE, took too long and - as ever - has become more of a follow-up version, that - as said before - will follow soon to catch up. :)<br>Styx 2.2.0 did not only finalise the 2.1.0 Snapshot, it also brought in some exiting new additions. Check the ChangeLog!</li>
             <li><strong>January 2017, 26th</strong> - <a href="https://github.com/ophian/styx/releases/tag/2.1.0">Styx 2.1.0</a> was released. A very intense cared release shot and more of a 2.2 version, which will follow soon, to demonstrate what Styx is in real life.</li>
         </ul>
 
