Fix the Wiki link to new location

--- a/about/index.html
+++ b/about/index.html
@@ -120,8 +120,9 @@
 
             <p>As long as I find the time and the commitment to make this even better, Styx will develop and will include all
             good parts of the origin Serendipity development. You may replace your origin Serendipity installation without any
-            fear with this extended Edition and you will find everything work as intendet. Go and read the <strong>Styx</strong>
-            <a href="https://github.com/ophian/styx/wiki">Wiki</a> to see how this can be easily done without too much effort.
+            fear with this extended Edition and you will find everything work as intendet. Go and read the <strong>Get Styx</strong>
+            <a href="../hc/en/installation.html#user-content-the-important-upgraders-howto---step-by-step-guide">‘install’ or ‘upgrade’</a>
+            page to see how this can be easily done without too much effort.
             Even more you may want to read the <a href="https://github.com/ophian/styx/commits/master">commit history</a> and/or
             the <strong>Styx</strong> <a href="https://github.com/ophian/styx/blob/master/docs/NEWS">ChangeLog</a>.</p>
 
