Fix meta property="og:title" content

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Serendipity Styx Edition - Styx FAQ | Styx is what Serendipity should be | ophian.github.io">
+    <meta property="og:title" content="Serendipity Styx Edition - About Styx | Styx is what Serendipity should be | ophian.github.io">
     <meta property="og:site_name" content="Serendipity Styx Blog System">
     <meta property="og:description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta property="og:image" content="https://ophian.github.io/i/styx-opengraph.jpg">
