--- a/legal/privacy/index.html
+++ b/legal/privacy/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Serendipity Styx Edition - Legal | ophian.github.io</title>
+    <title>Serendipity Styx Edition - Styx Privacy | ophian.github.io</title>
     <meta charset="UTF-8">
     <meta name="description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Serendipity Styx Edition - Styx FAQ | Styx is what Serendipity should be | ophian.github.io">
+    <meta property="og:title" content="Serendipity Styx Edition - Styx Privacy | Styx is what Serendipity should be | ophian.github.io">
     <meta property="og:site_name" content="Serendipity Styx Blog System">
     <meta property="og:description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta property="og:image" content="https://ophian.github.io/i/styx-opengraph.jpg">
@@ -24,7 +24,7 @@
 </ul>
 <div class="menu menu--no-hero menu--tiny ">
     <div class="menu__page-title">
-        <h1><a href="/legal">Serendipity Styx Edition - Legal</a></h1>
+        <h1><a href="/legal/privacy">Serendipity Styx Edition - Styx Privacy</a></h1>
     </div>
     <div class="progress-bar" aria-hidden="true"><span class="progress-bar__fill"></span></div>
 </div>
@@ -38,7 +38,7 @@
 <div class="site-nav__panel" aria-hidden="true" aria-controls="site-nav__toggler">
     <nav id="main-navigation" role="navigation" aria-label="main navigation">
         <ul class="site-nav__menu">
-            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/legal" tabindex="-1" title="Serendipity Styx Legal">Styx Legal</a></li>
+            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/legal/privacy" tabindex="-1" title="Serendipity Styx Legal">Styx Privacy</a></li>
         </ul>
         <p class="site-nav__menu-category">Main</p>
         <ul class="site-nav__menu" aria-label="links to styx site main pages">
