--- a/legal/index.html
+++ b/legal/index.html
@@ -38,7 +38,7 @@
 <div class="site-nav__panel" aria-hidden="true" aria-controls="site-nav__toggler">
     <nav id="main-navigation" role="navigation" aria-label="main navigation">
         <ul class="site-nav__menu">
-            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/legal" tabindex="-1" title="Serendipity Styx Privacy">Legal</a></li>
+            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/legal" tabindex="-1" title="Serendipity Styx Legal">Legal</a></li>
         </ul>
         <p class="site-nav__menu-category">Main</p>
         <ul class="site-nav__menu" aria-label="links to styx site main pages">
