Add canonical path and use doc root assets path

--- a/about/index.html
+++ b/about/index.html
@@ -10,9 +10,10 @@
     <meta property="og:description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta property="og:image" content="https://ophian.github.io/i/styx-opengraph.jpg">
     <meta property="og:url" content="https://ophian.github.io/">
-    <link rel="apple-touch-icon" href="../i/apple-touch-icon.png">
-    <link rel="stylesheet" href="../css/libs.min.css">
-    <link rel="stylesheet" href="../css/styx.min.css">
+    <link rel="canonical" href="https://ophian.github.io/about/">
+    <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
+    <link rel="stylesheet" href="/css/libs.min.css">
+    <link rel="stylesheet" href="/css/styx.min.css">
 </head>
 <body>
 <ul class="skip-link__list">
@@ -91,7 +92,7 @@
                     <span class="date">Posted on&nbsp;<time>2018-01-16</time></span>
                     <span class="author">&nbsp;by&nbsp;<span class="author-name">Ian Styx</span></span>
                 </div>
-                <figure class="welcome"><img src="../i/welcome-styx.png" style="width: 50%; height: 50%;" alt=""></figure>
+                <figure class="welcome"><img src="/i/welcome-styx.png" style="width: 50%; height: 50%;" alt=""></figure>
             </div>
         </div>
         <div class="blog-post__content">
@@ -121,7 +122,7 @@
             <p>As long as I find the time and the commitment to make this even better, Styx will develop and will include all
             good parts of the origin Serendipity development. You may replace your origin Serendipity installation without any
             fear with this extended Edition and you will find everything work as intendet. Go and read the <strong>Get Styx</strong>
-            <a href="../hc/en/installation.html#user-content-the-important-upgraders-howto---step-by-step-guide">‘install’ or ‘upgrade’</a>
+            <a href="/hc/en/installation.html#user-content-the-important-upgraders-howto---step-by-step-guide">‘install’ or ‘upgrade’</a>
             page to see how this can be easily done without too much effort.
             Even more you may want to read the <a href="https://github.com/ophian/styx/commits/master">commit history</a> and/or
             the <strong>Styx</strong> <a href="https://github.com/ophian/styx/blob/master/docs/NEWS">ChangeLog</a>.</p>
