--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -10,9 +10,10 @@
     <meta property="og:description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta property="og:image" content="https://ophian.github.io/i/styx-opengraph.jpg">
     <meta property="og:url" content="https://ophian.github.io/">
-    <link rel="apple-touch-icon" href="../../i/apple-touch-icon.png">
-    <link rel="stylesheet" href="../../css/libs.min.css">
-    <link rel="stylesheet" href="../../css/styx.min.css">
+    <link rel="canonical" href="https://ophian.github.io/hc/en/installation.html">
+    <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
+    <link rel="stylesheet" href="/css/libs.min.css">
+    <link rel="stylesheet" href="/css/styx.min.css">
 </head>
 <body>
 <ul class="skip-link__list">
@@ -217,7 +218,7 @@
 <p>Serendipity <strong>Styx</strong> already comes with a <strong>secured</strong> installation, which uses a “two-factor authentication” (2FA) like token to exclusively bind the installation progress to the one being able to upload the files. <strong>You!</strong></p>
 
 <figure id="install-0">
-    <img src="../../i/h/fresh_install_00.png" alt="Token secured installation" class="content-image">
+    <img src="/i/h/fresh_install_00.png" alt="Token secured installation" class="content-image">
     <figcaption>Token secured installation (german browser example)</figcaption>
 </figure>
 
@@ -270,7 +271,7 @@
 <p>On this screen, you will see a basic pre-installation report that shows you a diagnosis of your Web Server settings. All variables that possibly might create trouble are listed orange-coloured. You usually do not need to pay attention to those, unless you are experiencing errors. Here’s an example screenshot:</p>
 
 <figure id="install-1">
-    <img src="../../i/h/fresh_install_01.png" alt="First page of the installer" class="content-image">
+    <img src="/i/h/fresh_install_01.png" alt="First page of the installer" class="content-image">
     <figcaption>First page of the installer (german browser example)</figcaption>
 </figure>
 
@@ -281,7 +282,7 @@
 <p>Since the goal of this Document is to show how fast you can install Serendipity, we will only discuss the “Simple installation” right now, so please click on this link and you will see a screen like this:</p>
 
 <figure id="install-2">
-    <img src="../../i/h/fresh_install_02.png" alt="Simple installation options" class="content-image">
+    <img src="/i/h/fresh_install_02.png" alt="Simple installation options" class="content-image">
     <figcaption>Simple installation options</figcaption>
 </figure>
 
@@ -314,7 +315,7 @@
 <p>Else, Serendipity will create the required database tables and sets up your blog as configured:</p>
 
 <figure id="install-3">
-    <img src="../../i/h/fresh_install_03.png" alt="Results of the database tables creation" class="content-image">
+    <img src="/i/h/fresh_install_03.png" alt="Results of the database tables creation" class="content-image">
     <figcaption>Results of the database tables creation</figcaption>
 </figure>
 
@@ -327,7 +328,7 @@
 <p>After the installation, the screen above showed you a link to “Visit your new blog here”. You can click on this, and then you should see your empty blog like this:</p>
 
 <figure id="startpage-empty">
-    <img src="../../i/h/fresh_install_04.png" alt="Index page of an empty blog" class="content-image">
+    <img src="/i/h/fresh_install_04.png" alt="Index page of an empty blog" class="content-image">
     <figcaption>Index page of an empty blog</figcaption>
 </figure>
 
@@ -340,7 +341,7 @@
 <p>Accessing this interface will give you a login screen:</p>
 
 <figure id="login-screen">
-    <img src="../../i/h/fresh_install_05.png" alt="Login screen" class="content-image">
+    <img src="/i/h/fresh_install_05.png" alt="Login screen" class="content-image">
     <figcaption>Login screen</figcaption>
 </figure>
 
@@ -349,7 +350,7 @@
 <p>Then you will see the admin interface:</p>
 
 <figure id="dashboard">
-    <img src="../../i/h/fresh_install_06.png" alt="Dashboard" class="content-image">
+    <img src="/i/h/fresh_install_06.png" alt="Dashboard" class="content-image">
     <figcaption>Dashboard</figcaption>
 </figure>
 
@@ -365,7 +366,7 @@
 The most important distinct option is whether to use the “WYSIWYG” editor. This will show you a Word-like interface for creating blog entries. It makes life easy, and if you do not know any HTML at all, you will be very glad about that editor that will allow you to insert images, links and text formatting at ease. This option can also be changed later, if you happen to dislike the WYSIWYG editor, or if you’re missing it.</p>
 
 <figure id="personal-settings">
-    <img src="../../i/h/fresh_install_07.png" alt="Personal settings" class="content-image">
+    <img src="/i/h/fresh_install_07.png" alt="Personal settings" class="content-image">
     <figcaption>Personal settings</figcaption>
 </figure>
 
@@ -374,7 +375,7 @@ The most important distinct option is whether to use the “WYSIWYG” editor. T
 <p>This section contains all relevant options to create and maintain entries and maintain categories.</p>
 
 <figure id="entry-editor">
-    <img src="../../i/h/fresh_install_08.png" alt="Entry editor" class="content-image">
+    <img src="/i/h/fresh_install_08.png" alt="Entry editor" class="content-image">
     <figcaption>Entry editor</figcaption>
 </figure>
 
@@ -383,7 +384,7 @@ The most important distinct option is whether to use the “WYSIWYG” editor. T
 <p>The media section allows you to upload and maintain images and documents you uploaded and can embed into entries.</p>
 
 <figure id="upload-form-for-the-media-database">
-    <img src="../../i/h/fresh_install_09.png" alt="Upload form for the media database" class="content-image">
+    <img src="/i/h/fresh_install_09.png" alt="Upload form for the media database" class="content-image">
     <figcaption>Upload form for the media database</figcaption>
 </figure>
 
@@ -398,19 +399,19 @@ The most important distinct option is whether to use the “WYSIWYG” editor. T
 <p>Note that the “Configuration” item will show you all the options you would see in the Expert Installation. There you can configure all the detailed options of your blog, like URL Rewriting, Permalinks, Charsets etc.</p>
 
 <figure id="configuration-section">
-    <img src="../../i/h/fresh_install_12.png" alt="Configuration section" class="content-image">
+    <img src="/i/h/fresh_install_12.png" alt="Configuration section" class="content-image">
     <figcaption>Configuration section</figcaption>
 </figure>
 
 <p>The sections Themes and Plugins allow you to configure and setup plugins as well as choose the layout of your Blog</p>
 
 <figure id="theme-selection">
-    <img src="../../i/h/fresh_install_10.jpg" alt="Theme selection" class="content-image">
+    <img src="/i/h/fresh_install_10.jpg" alt="Theme selection" class="content-image">
     <figcaption>Theme selection</figcaption>
 </figure>
 
 <figure id="plugin-configuration">
-    <img src="../../i/h/fresh_install_11.png" alt="Plugin configuration" class="content-image">
+    <img src="/i/h/fresh_install_11.png" alt="Plugin configuration" class="content-image">
     <figcaption>Plugin configuration</figcaption>
 </figure>
 
@@ -419,13 +420,13 @@ The most important distinct option is whether to use the “WYSIWYG” editor. T
 <p>This section is for “maintaining” specific system tasks, as there are the release file verifier, the “MediaLibrary Synchronizer”, Smarty compile cleanup task, Changelog & Debuglog file viewer, the “503 Maintenance Service Mode”, tools to import/export blogs and the “UTF8MB4” migration task.</p>
 
 <figure id="configuration-section">
-    <img src="../../i/h/fresh_install_13.png" alt="Maintenance section" class="content-image">
+    <img src="/i/h/fresh_install_13.png" alt="Maintenance section" class="content-image">
     <figcaption>Maintenance section</figcaption>
 </figure>
 
 <h4 id="docs-and-what-now">And what next?</h4>
 
-<p>Now that you have successfully installed Serendipity, go ahead and explore. Create some entries, categories, install a few plugins you can also find here in <a href="../../plugins">Styx Spartacus plugins</a>. The interface is in most cases self-explanatory and open for experiments.</p>
+<p>Now that you have successfully installed Serendipity, go ahead and explore. Create some entries, categories, install a few plugins you can also find here in <a href="/plugins">Styx Spartacus plugins</a>. The interface is in most cases self-explanatory and open for experiments.</p>
 
 <p>If you have any questions, feel free to come to <a href="https://board.s9y.org/">the forums</a> or to browse the <a href="./index.html">docs section</a> for further documentation.</p>
 
