--- a/hc/en/markup-plugins.html
+++ b/hc/en/markup-plugins.html
@@ -10,9 +10,10 @@
     <meta property="og:description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta property="og:image" content="https://ophian.github.io/i/styx-opengraph.jpg">
     <meta property="og:url" content="https://ophian.github.io/">
-    <link rel="apple-touch-icon" href="../../i/apple-touch-icon.png">
-    <link rel="stylesheet" href="../../css/libs.min.css">
-    <link rel="stylesheet" href="../../css/styx.min.css">
+    <link rel="canonical" href="https://ophian.github.io/hc/en/markup-plugins.html">
+    <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
+    <link rel="stylesheet" href="/css/libs.min.css">
+    <link rel="stylesheet" href="/css/styx.min.css">
 </head>
 <body>
 <ul class="skip-link__list">
