--- a/plugins/index.html
+++ b/plugins/index.html
@@ -10,9 +10,10 @@
     <meta property="og:description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta property="og:image" content="https://ophian.github.io/i/styx-opengraph.jpg">
     <meta property="og:url" content="https://ophian.github.io/">
-    <link rel="apple-touch-icon" href="../i/apple-touch-icon.png">
-    <link rel="stylesheet" href="../css/libs.min.css">
-    <link rel="stylesheet" href="../css/styx.min.css">
+    <link rel="canonical" href="https://ophian.github.io/plugins/">
+    <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
+    <link rel="stylesheet" href="/css/libs.min.css">
+    <link rel="stylesheet" href="/css/styx.min.css">
 </head>
 <body>
 <ul class="skip-link__list">
@@ -122,7 +123,7 @@
                   <h1>Styx Spartacus: Additional Plugins</h1>
                   <p><strong>SPARTACUS</strong> stands for <em>Serendipity Plugin Access Repository Tool And Customization/Unification System</em></p>
                   <p><span>[<strong>S</strong>]erendipity [<strong>P</strong>]lugin [<strong>A</strong>]ccess [<strong>R</strong>]epository [<strong>T</strong>]ool [<strong>A</strong>]nd [<strong>C</strong>]ustomization/[<strong>U</strong>]nification [<strong>S</strong>]ystem</span></p>
-                  <p><strong>Styx Spartacus</strong> does <strong>only</strong> support the GIT repository, which currently isn’t able to <strong>tar/zip</strong> a subfolder (plugin) on demand for you. Therefore the download link is set inactive here. Please use the built-in <a href="../hc/en/faq/#docs-what-is-spartacus-how-do-i-install-spartacus">Spartacus plugin</a> to install plugin sources, or clone/download the <a href="https://github.com/ophian/additional_plugins" title="GitHub Serendipity Plugins">additional_plugins</a> repository and copy the subdir you want to install in your blog as a plugin. Please follow the provided links.</p>
+                  <p><strong>Styx Spartacus</strong> does <strong>only</strong> support the GIT repository, which currently isn’t able to <strong>tar/zip</strong> a subfolder (plugin) on demand for you. Therefore the download link is set inactive here. Please use the built-in <a href="/hc/en/faq/#docs-what-is-spartacus-how-do-i-install-spartacus">Spartacus plugin</a> to install plugin sources, or clone/download the <a href="https://github.com/ophian/additional_plugins" title="GitHub Serendipity Plugins">additional_plugins</a> repository and copy the subdir you want to install in your blog as a plugin. Please follow the provided links.</p>
                   <div id="includedContent">
                     <div id="group_ALLGROUPS" data-include="event"></div>
                     <div id="sbgroup_ALLGROUPS" data-include="sidebar"></div>
