--- a/book/index.html
+++ b/book/index.html
@@ -17,20 +17,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <link rel="apple-touch-icon" href="../i/apple-touch-icon.png">
+    <link rel="canonical" href="https://ophian.github.io/book/">
+    <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="./css/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/book/css/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/libs.min.css">
-    <link rel="stylesheet" href="../css/styx.min.css">
-    <link rel="stylesheet" href="./css/book.min.css">
+    <link rel="stylesheet" href="/css/libs.min.css">
+    <link rel="stylesheet" href="/css/styx.min.css">
+    <link rel="stylesheet" href="/book/css/book.min.css">
     <script>
         // PLEASE better use Firefox or Chromium browsers !!
         if (/MSIE \d|Trident.*rv:/.test(navigator.userAgent)) {
-            document.write('<script src="./js/promise.min.js"><\/script>');
-            document.write('<script src="./js/fetch.polyfill.js"><\/script>');
+            document.write('<script src="/book/js/promise.min.js"><\/script>');
+            document.write('<script src="/book/js/fetch.polyfill.js"><\/script>');
         }
     </script>
     <script>
@@ -345,11 +346,11 @@ if (document.readyState == "DOMContentLoaded") {
 	</symbol>
 </svg>
 
-<script src="./js/anchor.min.js" type="text/javascript"></script>
+<script src="/book/js/anchor.min.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script>window.jQuery || document.write('<script src="../js/jquery-3.2.1.min.js"><\/script>')</script>
-<script src="../js/jquery.ui.totop.min.js" type="text/javascript"></script>
-<script src="./js/main.min.js" type="text/javascript"></script>
+<script>window.jQuery || document.write('<script src="/js/jquery-3.2.1.min.js"><\/script>')</script>
+<script src="/js/jquery.ui.totop.min.js" type="text/javascript"></script>
+<script src="/book/js/main.min.js" type="text/javascript"></script>
 <script>
     $(document).ready(function() {
         $().UItoTop();
