Fix typo in serendipity_event_email_bot_obfuscator desc

--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -57,7 +57,7 @@
             <dd class="plugin_maintainers">Stephan Manske, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
-        <p class="plugin_description">Makes email addresses clickabe, but obfuscates them to block spam harvester bots</p>
+        <p class="plugin_description">Makes email addresses clickable, but obfuscates them to block spam harvester bots</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_email_bot_obfuscator.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_email_bot_obfuscator">GitHub</a></li>
@@ -2547,7 +2547,7 @@
             <dd class="plugin_maintainers">Stephan Manske, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
-        <p class="plugin_description">Makes email addresses clickabe, but obfuscates them to block spam harvester bots</p>
+        <p class="plugin_description">Makes email addresses clickable, but obfuscates them to block spam harvester bots</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_email_bot_obfuscator.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_email_bot_obfuscator">GitHub</a></li>
