Add Styx Spartacus to book www toc

--- a/book/index.html
+++ b/book/index.html
@@ -89,6 +89,9 @@
           <li><i class="fa fa-star"></i>&nbsp;<a href="/blog/archives" tabindex="-1" title="Serendipity Styx Blog Archives">Styx Blog Archives</a></li>
           <li><i class="fa fa-star"></i>&nbsp;<a href="/atom.xml" tabindex="-1" title="Serendipity Styx Blog Feed">Styx Blog Feed</a></li>
           <li><i class="fa fa-star"></i>&nbsp;<a href="/about" tabindex="-1" title="About Serendipity Styx">About Styx</a></li>
+          <li>Styx Spartacus</li>
+          <li><i class="fa fa-star"></i>&nbsp;<a href="/plugins" tabindex="-1" title="Spartacus Styx Plugins">Spartacus Styx Plugins</a></li>
+          <li><i class="fa fa-star"></i>&nbsp;<a href="/themes" tabindex="-1" title="Spartacus Styx Themes">Spartacus Styx Themes</a></li>
          </ul>
          <ul class="social-links" aria-label="links to styx help pages">Help
           <li><i class="fa fa-star"></i>&nbsp;<a href="/hc" tabindex="-1" title="Serendipity Styx Help Center">Help center</a></li>
