Point to Spartacus P/T vv

--- a/themes/index.html
+++ b/themes/index.html
@@ -84,6 +84,8 @@
                         <li><a href="#all">All Templates</a></li>
                         <li><a href="#spafrothe">All Additional Templates</a></li>
                         <li>&nbsp;</li>
+                        <li><a href="/plugins">Spartacus Plugins</a></li>
+                        <li>&nbsp;</li>
                         <h4>[A-Z]</h4>
                         <li><a href="#1024px">1024px v1.1 (2009-08-16)</a></li>
                     <li class="core-themes"><a href="#2k11">2k11 [standard[</a></li>
