--- a/plugins/index.html
+++ b/plugins/index.html
@@ -116,6 +116,10 @@
                         <li><a href="#sbgroup_IMAGES">Images</a></li>
                         <li><a href="#sbgroup_STATISTICS">Statistics</a></li>
                     </ul>
+
+                    <p>&nbsp;</p>
+
+                    <h4><a href="/themes">Spartacus Themes</a></h4>
                 </nav>
             </div>
             <div class="col-document__wrapper col-document__wrapper--spartacus">
