--- a/themes/index.html
+++ b/themes/index.html
@@ -76,7 +76,7 @@
 <main class="site-content site-content--col site-content--no-hero" id="main-content" role="main">
     <section class="section site-col" data-reading-progress="true">
         <div class="col">
-            <div class="col-menu__wrapper">
+            <div class="col-menu__wrapper col-menu__wrapper--spartacus">
                 <nav class="col-menu col-menu-spartacus" role="navigation" aria-label="Spartacus Themes sidebar list">
                     <h3>Themes</h3>
 
