--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -499,7 +499,7 @@ chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>',
 
         <p>If you get any network errors or download failures, either the repository mirror servers (SourceForge.net or the default GitHub.com) are down. Or your server might be firewalled and does not allow outgoing connections, in which case you’ll need to talk with your provider about this.</p>
 
-        <p>Now you can click on any plugin to fetch it; The shortname, plugin-versiion and short description is hidden in the clickable arrow info box underneath the title.</p>
+        <p>Now you can click on any plugin to fetch it; The shortname, plugin-version and short description is hidden in the clickable arrow info box underneath the title.</p>
 
     <span class="faq-up"><a class="navigator" href="#faq-top">top</a></span>
 </div>
