--- a/hc/en/using-plugins.html
+++ b/hc/en/using-plugins.html
@@ -510,13 +510,13 @@
 
                     <p>The [S]erendipity [P]lugin [A]ccess [R]epository [T]ool [A]nd [C]ustomization/[U]nification [S]ystem - Allows you to download plugins and themes from our online repository.</p>
 
-                    <p>Please read the FAQ`s related install notes <a href="faq/index.html#docs-what-is-spartacus-how-do-i-install-spartacus">here</a> and about usage <a href="#docs-using-spartacus">here</a>.</p>
+                    <p>Please read the related FAQ install notes <a href="faq/index.html#docs-what-is-spartacus-how-do-i-install-spartacus">here</a> and about usage <a href="#docs-using-spartacus">here</a>.</p>
 
                     <h3 id="docs-spam-protector">Spam Protector (active)</h3>
 
                     <p>A variety of default methods to prevent comment spam. Do not remove, since other plugins rely on its services.</p>
 
-                    <p>Please read the FAQ`s SPAM fighting notes about the SPAM trinity <a href="faq/index.html#docs-anti-spam-protector-spamblock">here</a>.</p>
+                    <p>Please read the important FAQ SPAM fighting notes about using the SPAM trinity <a href="faq/index.html#docs-anti-spam-protector-spamblock">here</a>.</p>
 
                     <h2 id="docs-plugins-moved-back-into-spartacus">Plugins moved back into Spartacus</h2>
 
