Update markup-plugins doc

--- a/hc/en/markup-plugins.html
+++ b/hc/en/markup-plugins.html
@@ -111,7 +111,7 @@
 
                     <h3 id="docs-standard-s9y-markup-plugins">Standard Serendipity Markup Plugins</h3>
 
-                    <p>Please note: This page is a work in progress.</p>
+                    <p>If you use a WYSIWYG-Editor lieke the CKEditor you don't need to care about markup. It is done and stored for you.</p>
 
                     <h4 id="docs-nl2br">nl2br</h4>
 
@@ -164,6 +164,8 @@
 :P  | tounge\_smile.gif</code></pre>
 
                     <h4 id="docs-s9y-markup">Serendipity Markup</h4>
+
+                    <p>This dinosaur of markup helper plugins converts a very few easy to learn markup cases into real HTML markup, just like textile or markdown do these days.</p>
 
                     <pre><code>**bolded text**
 _underlined text_
