Update https doc

--- a/hc/en/ssl-encrypting.html
+++ b/hc/en/ssl-encrypting.html
@@ -99,11 +99,11 @@
 
                     <h3 id="docs-implement-ssl-to-your-domain">Implement SSL to your domain</h3>
 
-                    <p>How to do this depends from your hosting provider. Many providers make it very easy for their users to use HTTPS. Maybe you have to ask your provider for the neccesary steps.</p>
+                    <p>How to do this depends from your hosting provider. Many providers make it very easy for their users to use HTTPS. Maybe you have to ask your provider for the necessary steps.</p>
 
                     <p>When you operate a root server on your own, you should know how to do this. ;-)</p>
 
-                    <p>There is to say that nowadays you can easily get SSL certificates for no charge at <a href="https://letsencrypt.org">Let’s Encrypt</a>.</p>
+                    <p>There is to say that nowadays you can easily get SSL certificates for no charge at <a href="https://letsencrypt.org" target="_blank">Let’s Encrypt</a>.</p>
 
                     <h3 id="docs-map-all-http-calls-to-https">Map all HTTP-calls to HTTPS</h3>
 
