Update spam doc

--- a/hc/en/spam.html
+++ b/hc/en/spam.html
@@ -279,6 +279,8 @@
 
                     <h3 id="docs-questions">Questions?</h3>
 
+                    <p>Please read the important FAQ SPAM fighting notes about the SPAM plugin trinity <a href="faq/index.html#docs-anti-spam-protector-spamblock">over here</a>.</p>
+
                     <p>If you have further questions about blocking spam, or have some ideas on how to improve fighting spam, please drop by on S9y-Origin <a href="https://board.s9y.org">Forums</a>!</p>
 
                 </div>
