Update shared.. doc

--- a/hc/en/shared-installation.html
+++ b/hc/en/shared-installation.html
@@ -94,7 +94,7 @@
                     <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
                     <h2 id="docs-shared-installation">Shared installation</h2>
 
-<p>(WARNING: THIS FEATURE IS EXPERIMENTAL!)</p>
+<p>(WARNING: This feature is nothing new - but still marked “EXPERIMENTAL”!)</p>
 
 <p>You can install ONE s9y distribution and manage multiple users on it by sharing the core files and then deploying specially crafted files in each user’s directory.</p>
 
