--- a/hc/en/rss.html
+++ b/hc/en/rss.html
@@ -153,7 +153,7 @@
 
                     <p>You can also migrate your Serendipity data to a different blog to specify the URL to your RSS-feed.</p>
 
-                    <p>Note that the RSS standard usually allows for 15 entries, so you would not be able to Import your entire blog database. Serendipity supports exporting all items using the “all” parameter, so it is possible that other advanced weblogs can do the same. If you are handy with SQL, it is a relatively painless process to write a <em>insert into … select</em> statement to handle your import, if the underlying importing database is compatible to the simple Serendipity database layout.</p>
+                    <p>Note that the RSS standard usually allows for 15 entries, so you would not be able to Import your entire blog database. Serendipity supports exporting all items using the “all” parameter, so it is possible that other advanced weblogs can do the same. If you are handy with SQL, it is a relatively painless process to write a <em>INSERT INTO … SELECT</em> statement to handle your import, if the underlying importing database is compatible to the simple Serendipity database layout.</p>
                 </div>
             </div>
         </div>
