--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -835,7 +835,7 @@ It is not advised to create your own  style_fallback.css file.</p>
       <li>class: The classname of the plugin to show, like “serendipity_plugin_quicksearch”</li>
       <li>id: A distinct ID of a plugin to show (see database table <code>serendipity_plugins</code>)</li>
       <li>side: Which sidebar the plugins belongs to. If set to “*”, the sidebar will not matter.</li>
-      <li>negate: If set, reverts the previous filters, can be used to “Show all plugins EXECEPT …”.</li>
+      <li>negate: If set, reverts the previous filters, can be used to “Show all plugins EXCEPT …”.</li>
       <li>empty: Can be set to a string that is shown, when the plugin output was empty.</li>
       <li>template: Can be set to a sidebar template file other than the default “sidebar.tpl”</li>
       <li><strong>EXAMPLE</strong>: <code>{serendipity_showPlugin class="serendipity_your_nugget" id="serendipity_your_plugin:21323223efsd22aa" side="left|right|hide|*" negate="null|true"}</code></li>
