--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -1065,7 +1065,7 @@ It is not advised to create your own  style_fallback.css file.</p>
 <ul>
   <li><code>$commentform_action</code> contains the form URL to submit the data to.</li>
   <li><code>$commentform_id</code> contains the ID of the entry to display the form for.</li>
-  <li><code>$commentform_name</code>, _email, …: The specific entered data from the user. Drawn from POST or COOKIE.</li>
+  <li><code>$commentform_name</code>, <code>…_email</code>, <code>…</code>: The specific entered data from the user. Drawn from POST or COOKIE.</li>
   <li><code>$commentform_replyTo</code>: Contains dropdown values for the threaded comment list so far</li>
   <li><code>$is_commentform_showToolbar</code>: Indicates if extended commentform options shall be displayed (admin purpose)</li>
   <li><code>$is_allowSubscriptions</code>: Whether the “mail notifications” option is available</li>
