Extend cadc18c serendipity_setFormToken $type param (see serendipity_getTotalCount $what)

--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -963,7 +963,7 @@ It is not advised to create your own  style_fallback.css file.</p>
   </li>
   <li><strong>serendipity_setFormToken</strong> (serendipity_smarty_setFormToken): Sets the XSS-prevention form token (a unique hash)
     <ul>
-      <li>type: If set to “form”, a whole <code>&lt;input /&gt;</code> element will be returned. If set to “url” a URL-compatible string (key=value) will be returned. Else, only the token itself will be returned.</li>
+      <li><strong>$type</strong>: If set to “form”, a whole <code>&lt;input /&gt;</code> element will be returned. If set to “url” a URL-compatible string (key=value) will be returned. Else, only the token itself will be returned.</li>
     </ul>
   </li>
 </ul>
